fix: fixed spacing between divs

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,4 @@
 .home-container,
-.technologies-container,
 .language-container {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #efe9e1;
@@ -47,6 +46,7 @@
 .language-aboutMe {
   display: flex;
   justify-content: space-around;
+  margin: -3%;
 }
 
 @media (max-width: 768px) {
@@ -60,7 +60,6 @@
   }
 
   .language-container {
-    flex-direction: column;
     width: 100%;
   }
 }
