--- a/src/app/pages/language/language.component.scss
+++ b/src/app/pages/language/language.component.scss
@@ -1,5 +1,7 @@
 .language-container {
   width: 400px;
+  display: flex;
+  justify-content: center;
 }
 
 .title {
